[gd_scene load_steps=17 format=3 uid="uid://guehs06rsfa1"]

[ext_resource type="PackedScene" uid="uid://btja81mcoqvcc" path="res://scenes/ui/menu/base_menu_panel.tscn" id="1_vvs0u"]
[ext_resource type="Script" uid="uid://c1fgwsggeek0v" path="res://scenes/ui/online/lobby.gd" id="2_wsvsj"]
[ext_resource type="PackedScene" uid="uid://b68vtard4p6s3" path="res://scenes/ui/minimap/minimap.tscn" id="3_6gxa0"]
[ext_resource type="Texture2D" uid="uid://4ccwqkvp01tf" path="res://assets/gui/menu/backgrounds/sub_panel.png" id="5_8ywfm"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="5_rncjt"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="6_wcimc"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="6_yotih"]
[ext_resource type="PackedScene" uid="uid://chch0q8y12i3i" path="res://scenes/ui/multiplayer/connected_player_panel.tscn" id="7_4r14n"]
[ext_resource type="PackedScene" uid="uid://dy4dmaksk0oot" path="res://scenes/ui/online/lobby_player.tscn" id="7_42u2e"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="7_r14xm"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="8_wh7uq"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="8_y4322"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="9_dpp5c"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="10_hmkcc"]
[ext_resource type="PackedScene" uid="uid://b21pxp2ai2cow" path="res://scenes/ui/icons/copy.tscn" id="11_ssmau"]
[ext_resource type="PackedScene" uid="uid://corpp72mh3y4" path="res://scenes/ui/menu/skirmish/turn_config.tscn" id="12_70kkq"]

[node name="lobby" instance=ExtResource("1_vvs0u")]
script = ExtResource("2_wsvsj")

[node name="minimap" parent="widgets" index="0" instance=ExtResource("3_6gxa0")]
offset_left = 925.0
offset_top = 280.0
offset_right = 965.0
offset_bottom = 320.0

[node name="map_name" type="NinePatchRect" parent="widgets/minimap" index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -295.0
offset_right = 85.0
offset_bottom = -295.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8ywfm")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="label" type="Label" parent="widgets/minimap/map_name" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_yotih")
theme_override_font_sizes/font_size = 20
text = "dummy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lobby_player_0" parent="widgets" index="1" instance=ExtResource("7_42u2e")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 25.0
offset_top = 30.0
offset_right = 675.0
offset_bottom = 155.0
grow_horizontal = 1
grow_vertical = 1
swap_target = NodePath(".")

[node name="lobby_player_1" parent="widgets" index="2" instance=ExtResource("7_42u2e")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 25.0
offset_top = 155.0
offset_right = 675.0
offset_bottom = 280.0
grow_horizontal = 1
grow_vertical = 1
team = 2
index = 1
swap_target = NodePath("../lobby_player_0")

[node name="lobby_player_2" parent="widgets" index="3" instance=ExtResource("7_42u2e")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 25.0
offset_top = 280.0
offset_right = 675.0
offset_bottom = 405.0
grow_horizontal = 1
grow_vertical = 1
team = 3
index = 2
swap_target = NodePath("../lobby_player_1")

[node name="lobby_player_3" parent="widgets" index="4" instance=ExtResource("7_42u2e")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 25.0
offset_top = 405.0
offset_right = 675.0
offset_bottom = 530.0
grow_horizontal = 1
grow_vertical = 1
team = 4
index = 3
swap_target = NodePath("../lobby_player_2")

[node name="player_labels" type="CenterContainer" parent="widgets" index="5"]
layout_mode = 0
offset_left = 25.0
offset_top = 540.0
offset_right = 1175.0
offset_bottom = 630.0

[node name="labels_grid" type="GridContainer" parent="widgets/player_labels" index="0"]
layout_mode = 2
columns = 4

[node name="player_0" parent="widgets/player_labels/labels_grid" index="0" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_1" parent="widgets/player_labels/labels_grid" index="1" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_2" parent="widgets/player_labels/labels_grid" index="2" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_3" parent="widgets/player_labels/labels_grid" index="3" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_4" parent="widgets/player_labels/labels_grid" index="4" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_5" parent="widgets/player_labels/labels_grid" index="5" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_6" parent="widgets/player_labels/labels_grid" index="6" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="player_7" parent="widgets/player_labels/labels_grid" index="7" instance=ExtResource("7_4r14n")]
layout_mode = 2
is_online_relay = true

[node name="join_code" type="NinePatchRect" parent="widgets" index="6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -15.0
offset_right = -600.0
offset_bottom = -675.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8ywfm")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="label" type="Label" parent="widgets/join_code" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_yotih")
theme_override_font_sizes/font_size = 20
text = "dummy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="copy_button" type="TextureButton" parent="widgets/join_code" index="1"]
offset_left = 464.0
offset_right = 500.0
offset_bottom = 40.0
texture_normal = ExtResource("8_wh7uq")
texture_pressed = ExtResource("9_dpp5c")
texture_hover = ExtResource("10_hmkcc")
texture_focused = ExtResource("10_hmkcc")

[node name="tank" parent="widgets/join_code/copy_button" index="0" instance=ExtResource("11_ssmau")]
position = Vector2(18, 18)

[node name="start_button" type="TextureButton" parent="widgets" index="7"]
layout_mode = 0
offset_left = 985.0
offset_top = 640.0
offset_right = 1175.0
offset_bottom = 680.0
texture_normal = ExtResource("5_rncjt")
texture_pressed = ExtResource("6_wcimc")
texture_hover = ExtResource("7_r14xm")
texture_focused = ExtResource("7_r14xm")

[node name="label" type="Label" parent="widgets/start_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_y4322")
text = "TR_START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back_button" type="TextureButton" parent="widgets" index="8"]
layout_mode = 0
offset_left = 25.0
offset_top = 640.0
offset_right = 215.0
offset_bottom = 680.0
texture_normal = ExtResource("5_rncjt")
texture_pressed = ExtResource("6_wcimc")
texture_hover = ExtResource("7_r14xm")
texture_focused = ExtResource("7_r14xm")

[node name="label" type="Label" parent="widgets/back_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_y4322")
text = "TR_BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnConfig" parent="widgets" index="9" instance=ExtResource("12_70kkq")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -350.0
offset_top = -60.0
offset_right = 350.0
offset_bottom = -20.0
grow_vertical = 0

[node name="downloading" type="Label" parent="." index="2"]
visible = false
layout_mode = 0
offset_left = -500.0
offset_top = -25.0
offset_right = 500.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("6_yotih")
theme_override_font_sizes/font_size = 32
text = "TR_DOWNLOADING_MAP"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="widgets/join_code/copy_button" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="widgets/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="widgets/back_button" to="." method="_on_back_button_pressed"]
